<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/author_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/no_author"
        style="@style/CardTextStyle.Description"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/posted_ago_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/posted_now"
        style="@style/CardTextStyle.Description"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/no_title"
        style="@style/CardTextStyle.Title"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/post_image_iv"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:scaleType="centerCrop"
        android:layout_marginVertical="4dp"
        app:shapeAppearanceOverlay="@style/RoundedCorners"
        android:src="@drawable/no_image"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/body_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:text="@string/post_body_prompt"
        style="@style/CardTextStyle.Description"/>


</LinearLayout>