<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.button.MaterialButtonToggleGroup
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/tier_btn_group"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:padding="4dp"
    android:orientation="horizontal"
    app:singleSelection="true"
    app:selectionRequired="true">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/all_tiers_btn"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/all_tiers"
        style="@style/ButtonStyle"
        android:checkable="true" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tier_1_btn"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/tier_1"
        style="@style/ButtonStyle"
        android:checkable="true" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tier_2_btn"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/tier_2"
        style="@style/ButtonStyle"
        android:checkable="true" />

</com.google.android.material.button.MaterialButtonToggleGroup>